Fix CSS overlap

--- a/static/src/components/pages/recipe/page-recipe.css
+++ b/static/src/components/pages/recipe/page-recipe.css
@@ -6,7 +6,7 @@
   border-bottom: 2px solid var(--ion-color-primary);
 }
 
-.image {
+.thumb {
   width: 150px;
 }
 
